--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <h2 class="mission-statement">Simplify scheduling and campus life <br>&nbsp;&nbsp;&nbsp;&nbsp;with our calendar and discovery tools!</h2>
     <p class="mission-subhead">Discover new organizations and events effortlessly. <br> Subscribe, RSVP, and manage your schedule <br>seamlessly. Exclusive to UNT for enhanced campus <br> engagement and convenience. </p>
 
-
+    <div class="login-container">
+    <h3 class="login-heading">Log in or create an account.</h3>
+    <button type="button" id="student-button">Student</button>
+    <button type="button" id="organization-button">Organization</button>
+    </div>
 
 
 
