--- a/index.html
+++ b/index.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GBCIH</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+    <div class="logo">
+        <img width='250px' src="images/gbcih-high-resolution-logo-transparent.png">
     </div>
 
-    <form class="search-form" action="#" method="GET">
-        <input class="search-input" type="text" name="search" placeholder="Search...">
-        <button class="search-button" type="submit">Search</button>
-      </form>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            
+        </ul>
+    </nav>
 
 <main>
-    <h1 class="main-abbr">GBCIH</h1>
+    
     <h2 class="mission-statement">Simplify scheduling and campus life <br>&nbsp;&nbsp;&nbsp;&nbsp;with our calendar and discovery tools!</h2>
     <p class="mission-subhead">Discover new organizations and events effortlessly. <br> Subscribe, RSVP, and manage your schedule <br>seamlessly. Exclusive to UNT for enhanced campus <br> engagement and convenience. </p>
 
     <div class="login-container">
-    <h3 class="login-heading">Log in or create an account.</h3>
-    <button type="button" id="student-button">Student</button>
-    <button type="button" id="organization-button">Organization</button>
+    <h3 class="login-heading">Let's get connected!</h3>
+    <a href="login.html"><button type="button" id="login-button">Login</button></a>
     </div>
 
 
