Login and userHome
I changed the login page and created the userHome page

--- a/login.html
+++ b/login.html
@@ -47,8 +47,9 @@
             <a href="#">Forgot password?</a>
 
         </div>
-
-        <button type='submit' class="submit-btn">Login</button>
+        <!-- going to change this later, linking to the user home-->
+        <!--                                   originally "submit"-->
+        <a href="userHome.html"><button type="button">Login</button></a>
 
         <div class="register-link">
             <p>
