updating styles and userHome

--- a/userHome.html
+++ b/userHome.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="logo">
+    <div class="logo" style="border: 2px solid brown">
         <img width='250px' src="images/gbcih-high-resolution-logo-transparent.png">
     </div>
-<div class="discover">
+<div class="discover" style="border: 2px solid green">
     <input type="input" placeholder="Discover">
-
 </div>
 
 </body>
