--- a/userHome.html
+++ b/userHome.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>User Calendar</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div id="container">
+            <div id="header"></div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+            <div id="weekdays">
+                <div>Sunday</div>
+                <div>Monday</div>
+                <div>Tuesday</div>
+                <div>Wednesday</div>
+                <div>Thursday</div>
+                <div>Friday</div>
+                <div>Saturday</div>                
+            </div>
+            
+            <div id="calendar"></div>
+        </div>
 
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="logo" style="border: 2px solid brown">
-        <img width='250px' src="images/gbcih-high-resolution-logo-transparent.png">
-    </div>
-<div class="discover" style="border: 2px solid green">
-    <input type="input" placeholder="Discover">
-</div>
-
-</body>
+        <script src="./userHome.js"></script>
+    </body>
 </html>
