--- a/userHome.html
+++ b/userHome.html
@@ -8,7 +8,13 @@
     </head>
     <body>
         <div id="container">
-            <div id="header"></div>
+            <div id="header">
+                <div id="monthDisplay"></div>
+                <div>
+                    <button id="backButton">&lt</button>
+                    <button id="nextButton">&gt</button>
+                </div>
+            </div>
 
             <div id="weekdays">
                 <div>Sunday</div>
@@ -22,6 +28,27 @@
             
             <div id="calendar"></div>
         </div>
+
+        <div id="newEventModal">
+            <h2>New Event</h2>
+            <input id="eventTitleInput" placeholder="Event Title"\>
+
+            <button id="saveButton">Save</button>
+            <button id="cancelButton">Cancel</button>
+
+        </div>
+
+        <div id="deleteEventModal">
+            <h2>Event</h2>
+
+            <p id="eventText"></p>
+
+            <button id="deleteButton">Delete</button>
+            <button id="closeButton">Close</button>
+
+        </div>
+
+        <div id="modalBackDrop"></div>
 
         <script src="./userHome.js"></script>
     </body>
