--- a/index.html
+++ b/index.html
@@ -35,6 +35,47 @@
     <a href="login.html"><button type="button" id="login-button">Login</button></a>
     </div>
 
+<script src="script.js"></script> <!-- Include your JavaScript file -->
+</body>
+</html>
+<!-- Tab navigation -->
+<div class="tab-container">
+    <button class="tablink" onclick="openTab('tab1')">Tab 1</button>
+    <button class="tablink" onclick="openTab('tab2')">Tab 2</button>
+    <!-- Add more tabs as needed -->
+
+    <div id="tab1" class="tabcontent">
+        <h3>Tab 1 Content</h3>
+        <p>This is the content for Tab 1. You can include any information, lists, or buttons related to organizations that users can subscribe to.</p>
+        <ul>
+            <li>Organization 1</li>
+            <li>Organization 2</li>
+            <li>Organization 3</li>
+            <!-- Add more organizations as needed -->
+        </ul>
+        <button onclick="subscribeToOrganization('organization1')">Subscribe to UNT DINING</button>
+        <button onclick="subscribeToOrganization('organization2')">Subscribe to UNT Football</button>
+        <button onclick="subscribeToOrganization('organization3')">Subscribe to UNT Soccer</button>
+        <!-- Add more subscribe buttons as needed -->
+    </div>
+
+    <div id="tab2" class="tabcontent">
+        <h3>Tab 2 Content</h3>
+        <p>This is the content for Tab 2. You can include any other information or functionality here.</p>
+        <li>Organization 2</li>
+        <li>Organization 3</li>
+        <!-- Add more organizations as needed -->
+    </ul>
+    <button onclick="subscribeToOrganization('organization1')">Subscribe to UNT DINING</button>
+    <button onclick="subscribeToOrganization('organization2')">Subscribe to UNT Football</button>
+    <button onclick="subscribeToOrganization('organization3')">Subscribe to UNT Soccer</button>
+    <!-- Add more subscribe buttons as needed -->
+    </div>
+    <!-- Add more tab content as needed -->
+</div>
+</main>
+</body>
+</html>
 
 
 
