--- a/userHome.html
+++ b/userHome.html
@@ -7,6 +7,21 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+
+<div id="searchBar">
+        <nav>
+            <ul>
+                <!-- Add the modified search bar here -->
+                <li>
+                    <div class="search-container">
+                        <input type="text" id="searchInput" placeholder="Search...">
+                        <button type="button" id="searchButton" onclick="search()">Search</button>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+</div>
+
         <div id="container">
             <div id="header">
                 <div id="monthDisplay"></div>
