added test arrays / fixed styling

--- a/userHome.html
+++ b/userHome.html
@@ -6,7 +6,7 @@
         <title>User Calendar</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="calendarBody">
         <div id="container">
             <div id="header">
                 <div id="monthDisplay"></div>
