--- a/userHome.html
+++ b/userHome.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
 </div>
-
+<div id="userHome">
         <div id="container">
             <div id="header">
                 <div id="monthDisplay"></div>
@@ -66,5 +66,6 @@
         <div id="modalBackDrop"></div>
 
         <script src="./userHome.js"></script>
+    </div>
     </body>
 </html>
