--- a/register.html
+++ b/register.html
@@ -49,8 +49,9 @@
 
         </div>
         <!-- going to change this later, linking to the user home-->
-        <!--                                   originally "submit"-->
-        <a href="#"><button type="submit">Register</button></a>
+        <!--                                   originally "submit"
+        <a href="#" id="registration-button"><button type="submit">Register</button></a>-->
+        <button id="registration-button" type="submit">Register</button>
 
 
         </form>
