--- a/userHome.html
+++ b/userHome.html
@@ -64,7 +64,8 @@
         </div>
 
         <div id="modalBackDrop"></div>
-
+        <script src="globals.js"></script>
+        <script src="login.js"></script>
         <script src="./userHome.js"></script>
     </div>
     </body>
