--- a/orgHome.html
+++ b/orgHome.html
@@ -87,7 +87,7 @@
     </div>
     
     <script src="globals.js"></script>
-    <script src="login.js"></script>
+    <!--<script src="login.js"></script>-->
     <script src="orgHome.js"></script>
 
     
