--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="contact-container">
+        <h1>Contact Us</h1>
+        <p>If you have any questions, please don't hesitate to contact us:</p>
+        <ul>
+            <li><strong>Phone:</strong> +1 (555) 123-4567</li>
+            <li><strong>Email:</strong> <a href="mailto:info@university.edu">info@university.edu</a></li>
+            <li><strong>Address:</strong> 123 University Lane, College City, State, 12345</li>
+        </ul>
+        <h2>Follow Us</h2>
+        <p>Connect with us on social media:</p>
+        <ul class="social-media-links">
+            <li><a href="https://www.facebook.com/university" target="_blank">Facebook</a></li>
+            <li><a href="https://www.twitter.com/university" target="_blank">Twitter</a></li>
+            <li><a href="https://www.instagram.com/university" target="_blank">Instagram</a></li>
+            <li><a href="https://www.linkedin.com/school/university/" target="_blank">LinkedIn</a></li>
+        </ul>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
