--- a/userHome.html
+++ b/userHome.html
@@ -7,49 +7,59 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="container">
-            <div id="header">
-                <div id="monthDisplay"></div>
-                <div>
-                    <button id="backButton">&lt</button>
-                    <button id="nextButton">&gt</button>
+        <div id="searchBar">
+            <nav>
+                <ul>
+                    <!-- Add the modified search bar here -->
+                    <li>
+                        <div class="search-container">
+                            <input type="text" id="searchInput" placeholder="Search...">
+                            <button type="button" id="searchButton" onclick="search()">Search</button>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div id="userHome">
+            <div id="container">
+                <div id="header">
+                    <div id="monthDisplay"></div>
+                    <div>
+                        <button id="backButton">&lt</button>
+                        <button id="nextButton">&gt</button>
+                    </div>
+                </div>
+                <div id="weekdays">
+                    <div>Sunday</div>
+                    <div>Monday</div>
+                    <div>Tuesday</div>
+                    <div>Wednesday</div>
+                    <div>Thursday</div>
+                    <div>Friday</div>
+                    <div>Saturday</div>                
+                </div>
+                <div id="calendar"></div>
+                <!-- Event Tabs Container -->
+                <div class="event-tabs-container">
+                    <!-- Dynamically added event cards will go here -->
                 </div>
             </div>
-
-            <div id="weekdays">
-                <div>Sunday</div>
-                <div>Monday</div>
-                <div>Tuesday</div>
-                <div>Wednesday</div>
-                <div>Thursday</div>
-                <div>Friday</div>
-                <div>Saturday</div>                
+            <div id="newEventModal">
+                <h2>New Event</h2>
+                <input id="eventTitleInput" placeholder="Event Title">
+                <button id="saveButton">Save</button>
+                <button id="cancelButton">Cancel</button>
             </div>
-            
-            <div id="calendar"></div>
+            <div id="deleteEventModal">
+                <h2>Event</h2>
+                <p id="eventText"></p>
+                <button id="deleteButton">Delete</button>
+                <button id="closeButton">Close</button>
+            </div>
+            <div id="modalBackDrop"></div>
+            <script src="globals.js"></script>
+            <script src="login.js"></script>
+            <script src="userHome.js"></script>
         </div>
-
-        <div id="newEventModal">
-            <h2>New Event</h2>
-            <input id="eventTitleInput" placeholder="Event Title"\>
-
-            <button id="saveButton">Save</button>
-            <button id="cancelButton">Cancel</button>
-
-        </div>
-
-        <div id="deleteEventModal">
-            <h2>Event</h2>
-
-            <p id="eventText"></p>
-
-            <button id="deleteButton">Delete</button>
-            <button id="closeButton">Close</button>
-
-        </div>
-
-        <div id="modalBackDrop"></div>
-
-        <script src="./userHome.js"></script>
     </body>
 </html>
